# RepoC2Rust

./: .gitignore  README.md  avl_error_info.json  avl_report.json  c-algorithms_error_info.json  c-algorithms_report.json  cmptlz_report.json  md5_report.json  output.txt  pyproject.toml  rapidlz_report.json  run.sh  run_1.sh  shell.nix
c_metadata/src/: c_metadata.py  preprocess.py  remove_comment.py
c_metadata_old/avl/: files.json  functions.json
c_metadata_old/bzp/: files.json  functions.json
c_metadata_old/cmptlz/: files.json  functions.json
c_metadata_old/md5/: files.json  functions.json
c_metadata_old/rapidlz/: files.json  functions.json
c_metadata_old/sha256/: files.json  functions.json
cache/: definition_cache.json  dummy_function_cache.json  macro_cache.json  macro_function_cache.json
cache/definition/: index.json
cache/dummy_function/: index.json
cache/function/: index.json
cache/macro/: index.json
cache/macro_function/: index.json
cache_old/definition/: index.json
cache_old/function/: index.json
cache_old/macro_function/: index.json
config/prompts/: definition.txt  dummy_function.txt  function.txt  llm_fix_mismatched.txt  macro.txt  macro_function.txt
reports_0/: avl_report.json  bzp_report.json  c-algorithms_report.json  cmptlz_report.json  md5_report.json  rapidlz_report.json  sha256_report.json
reports_0/new/: avl_report.json  bzp_report.json  c-algorithms_report.json  sha256_report.json
reports_0/old/: bzp_report.json  md5_report.json  rapidlz_report.json  sha256_report.json
script/: run.py
src/llm_gen/: generation.py  (+5 more)
(+1480 files in other folders)
